[tool.poetry]
name = "eqinfoscraper"
version = "0.1.0-beta.2"
description = "A Python script that scrapes earthquake data from PHIVOLCS and JMA."
authors = ["Scoofszlo <scoofszlo@gmail.com>"]
include = [
    { path = "phivolcs_ca_cert", format = ["sdist", "wheel"] }
]


[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.32.3"
bs4 = "^0.0.2"
tqdm = "^4.66.5"
webdriver-manager = "^4.0.2"
selenium = "^4.24.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


