[tool.poetry]
name = "eqdatatools"
version = "0.1.0-beta.2"
description = "A versatile tool that scrapes earthquake data from PHIVOLCS and JMA, processes it, and provides simple statistical data."
authors = ["Scoofszlo <scoofszlo@gmail.com>"]
include = [
    { path = "phivolcs_ca_cert", format = ["sdist", "wheel"] }
]


[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.32.3"
bs4 = "^0.0.2"


[tool.poetry.group.dev.dependencies]
tqdm = "^4.66.5"
toml = "^0.10.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


